--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RoRRecipeApp</title>
+    <title>Get ya recipe</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,6 +11,15 @@
   </head>
 
   <body>
+  <div class="container">
+    <% if notice %>
+       <p class="notice alert alert-success"><%=notice%></p>
+    <% else %>
+       <p class="alert "><%=alert%></p>
+    <% end %>
+
+    </div>
+
     <%= yield %>
   </body>
 </html>
