--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.css"rel="stylesheet"/>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
@@ -22,9 +24,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav text-light">
       <% if user_signed_in? %>
-        <%= link_to "Foods", new_food_path, class:"nav-link active" %>
+        <%= link_to "Foods", foods_path, class:"nav-link active" %>
         <%= link_to "Recipes", recipes_path, class:"nav-link active"%>
-        <%= link_to "Recipe foods", recipe_foods_path, class:"nav-link active"%>
         <%= link_to "Public recipes", public_recipes_path, class:"nav-link active"%>
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
       <% end %>
@@ -50,4 +51,8 @@
 
     <%= yield %>
   </body>
+  <script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.0/mdb.min.js"
+></scrip
 </html>
