--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,13 +2,23 @@
 
 <h1>Recipes</h1>
 
-<div id="recipes">
+<div>
+  <div><%= link_to "new recipe", new_recipe_path %></div>
   <% @recipes.each do |recipe| %>
-    <%= render recipe %>
+   
+    <div class="recipes">
+    <div>
+      <p><%=recipe.name %></p>
+      <p>remove</p>
+    </div>
+    <div>
+      <p>
+      <%=recipe.description %>
+      </p>
+    </div>
+    </div>
     <p>
-      <%= link_to "Show this recipe", recipe %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New recipe", new_recipe_path %>
