--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,9 +1,30 @@
-<h1>New recipe</h1>
+<section class="h-100 gradient-form" style="background-color: #eee;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-xl-10">
+        <div class="card rounded-3 text-black">
+          <div class="row g-0">
+            <div class="col-lg-6">
+              <div class="card-body p-md-5 mx-md-4">
 
-<%= render "form", recipe: @recipe %>
+                <div class="text-center">
+                  <h4 class="mt-1 mb-5 pb-1"> Add new recipe recipe</h4>
+                </div>
 
-<br>
+                <%= render "form", recipe: @recipe %>
 
-<div>
-  <%= link_to "Back to recipes", recipes_path %>
-</div>
+                  <br>
+
+                  <div>
+                    <%= link_to "Back to recipes", recipes_path %>
+                  </div>
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
