--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,31 +1,37 @@
 .gradient-custom-2 {
-    /* fallback for old browsers */
-background: #fccb90;
+  /* fallback for old browsers */
+  background: #fccb90;
 
-/* Chrome 10-25, Safari 5.1-6 */
-background: -webkit-linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(
+    to right,
+    #ee7724,
+    #d8363a,
+    #dd3675,
+    #b44593
+  );
 
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
 }
 
 @media (min-width: 768px) {
-.gradient-form {
-height: 100vh !important;
-}
+  .gradient-form {
+    height: 100vh !important;
+  }
 }
 @media (min-width: 769px) {
-.gradient-custom-2 {
-border-top-right-radius: .3rem;
-border-bottom-right-radius: .3rem;
-}
+  .gradient-custom-2 {
+    border-top-right-radius: 0.3rem;
+    border-bottom-right-radius: 0.3rem;
+  }
 }
 
 .recipes {
-    border: 1px solid black;
-    margin: 50px;
-    padding:50px;
-    display: flex;
-    flex-direction: row;
-    gap: 200px;
+  border: 1px solid black;
+  margin: 50px;
+  padding: 50px;
+  display: flex;
+  flex-direction: row;
+  gap: 200px;
 }
