added shopping lists

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -2,7 +2,7 @@
   <button class = 'btn bg-dark '> add </button>
 </div>
 
-<table class=table table-bordered border-primary">
+<table class="table table-bordered border-primary">
   <thead>
     <tr>
       <th scope="col">food</th>
