--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -18,12 +18,12 @@
 
   <div>
     <%= form.label :preparation_time, style: "display: block" %>
-    <%= form.time_field :preparation_time %>
+    <%= form.text_field :preparation_time %>
   </div>
 
   <div>
     <%= form.label :cooking_time, style: "display: block" %>
-    <%= form.time_field :cooking_time %>
+    <%= form.text_field :cooking_time %>
   </div>
 
   <div>
