--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       <% if user_signed_in? %>
         <%= link_to "Foods", foods_path, class:"nav-link active" %>
         <%= link_to "Recipes", recipes_path, class:"nav-link active"%>
+        <%= link_to "Recipe foods", recipe_foods_path, class:"nav-link active"%>
         <%= link_to "Public recipes", public_recipes_path, class:"nav-link active"%>
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"nav-link" %>
       <% end %>
@@ -40,7 +41,7 @@
   </div>
 </nav>
 
-  <div class="container">
+  <div class="container pt-5">
     <% if notice %>
        <p class="notice alert alert-success"><%=notice%></p>
     <% else %>
