--- a/app/views/recipe_foods/index.html.erb
+++ b/app/views/recipe_foods/index.html.erb
@@ -1,6 +1,5 @@
-<p style="color: green"><%= notice %></p>
 
-<h1>Recipe foods</h1>
+<h1 class="heading">Recipe foods</h1>
 
 <div id="recipe_foods">
   <% @recipe_foods.each do |recipe_food| %>
@@ -11,4 +10,4 @@
   <% end %>
 </div>
 
-<%= link_to "New recipe food", new_recipe_food_path %>
+<button class="btn btn-secondary newbtn"><%= link_to "New recipe food", new_recipe_food_path %></button>
