--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Recipes</h1>
+<div class="rcp"><h1>Recipes</h1></div>
 
 <div>
-  <div><%= link_to "new recipe", new_recipe_path %></div>
+  <div class="linkto"><%= link_to "new recipe", new_recipe_path %></div>
   <% @recipes.each do |recipe| %>
    
     <div class="recipes">
