--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,8 +1,10 @@
-<div class='d flex  justify-content end'>
-  <button class = 'btn bg-dark '> add </button>
+<div class='button'>
+  <h1>All foods</h1>
+  <%= link_to "Add Food", new_food_path, class: "btn btn-primary mb-3 mt-3" %>
 </div>
 
-<table class="table table-bordered border-primary">
+<div class="table">
+  <table class="table table-bordered border-primary">
   <thead>
     <tr>
       <th scope="col">food</th>
@@ -17,8 +19,9 @@
       <td><%=food.name %></td>
       <td><%=food.measurement_unit%></td>
       <td><%= food.price %></td>
-      <td>delete</td>
+      <td ><%= button_to  "Destroy this food", food_path(food.id), method: :delete %></td>
     </tr>
   <% end %>
   </tbody>
 </table>
+</div>
