--- a/app/views/recipe_foods/_form.html.erb
+++ b/app/views/recipe_foods/_form.html.erb
@@ -1,32 +1,37 @@
-<%= form_with(model: recipe_food) do |form| %>
-  <% if recipe_food.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(recipe_food.errors.count, "error") %> prohibited this recipe_food from being saved:</h2>
+<section class=" gradient-form" style="background-color: #eee;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-50">
+      <div class="col-xl-10">
+        <div class="card rounded-3 text-black">
+          <div class="row g-0">
+            <div class="col-lg-8">
+              <div class="card-body p-md-5 mx-md-12">
 
-      <ul>
-        <% recipe_food.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+                <div class="text-center">
+                  <h4 class="mt-1 mb-5 pb-1 text-center"> Add new recipe recipe</h4>
+                </div>
+
+              <%= form_with(model: recipe_food) do |form| %>
+                  <div>
+                  <div class="pb-3">
+                    <%= form.label :quantity ,style: "display: block"  %>
+                    <%= form.number_field :quantity %>
+                  </div>
+                  <div class="pb-3">
+                    <%= form.label :food_id ,style: "display: block"  %>
+                  </div>
+                  <div class="pb-3"><%= form.select :food_id, @foods.map { |food| [food.name, food.id] } %></div>
+                  <div class="pb-3"><%= form.select :recipe_id , @recipes.map { |recipe| [recipe.name, recipe.id] } %></div>
+                  </div>
+                       <%= form.submit "Add Food" %>
+                  <br>
+                  <%end%>
+                <%= link_to "Back to recipe foods", recipe_foods_path %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div>
-    <%= form.label :quantity, style: "display: block" %>
-    <%= form.number_field :quantity %>
   </div>
-
-  <div>
-    <%= form.label :recipe_id, style: "display: block" %>
-    <%= form.number_field :recipe_id %>
-  </div>
-
-  <div>
-    <%= form.label :food_id, style: "display: block" %>
-    <%= form.number_field :food_id %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</section>
