--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -43,7 +43,6 @@ body {
 .text-center {
   display: flex;
   text-align: center;
-  text-align: center;
   justify-content: end;
 }
 
@@ -76,7 +75,7 @@ body {
   transition: 0.4s;
 }
 
-.slider:before {
+.slider::before {
   position: absolute;
   content: "";
   height: 26px;
@@ -96,7 +95,7 @@ input:focus + .slider {
   box-shadow: 0 0 1px green;
 }
 
-input:checked + .slider:before {
+input:checked + .slider::before {
   -webkit-transform: translateX(26px);
   -ms-transform: translateX(26px);
   transform: translateX(26px);
@@ -106,7 +105,7 @@ input:checked + .slider:before {
   border-radius: 34px;
 }
 
-.slider.round:before {
+.slider.round::before {
   border-radius: 50%;
 }
 
