--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,6 +5,8 @@
   </div>
   <div class="receipe">
     <p>preparation time: <%= @recipe.preparation_time%></p>
+    <span class='public-toggle'>Public</span>
+    
     <label class="switch">
       <input type="checkbox">
       <div class="slider round"></div>
